grammars/Wing.bnf
{
  //noinspection BnfResolve
  parserClass='com.github.wingidea.lang.parser.WingParser'
  //noinspection BnfResolve
  parserUtilClass='com.github.wingidea.lang.parser.WingParserUtil'

  //noinspection BnfResolve
  implements='com.github.wingidea.lang.psi.WingElement'
  //noinspection BnfResolve
  extends='com.github.wingidea.lang.psi.impl.WingElementImpl'

  //noinspection BnfResolve
  elementTypeHolderClass='com.github.wingidea.lang.psi.WingElementTypes'
  //noinspection BnfResolve
  elementTypeClass='com.github.wingidea.lang.psi.WingElementType'
  //noinspection BnfResolve
  tokenTypeClass='com.github.wingidea.lang.psi.WingTokenType'

  psiClassPrefix='Wing'
  psiImplClassSuffix='Impl'
  //noinspection BnfResolve
  psiPackage='com.github.wingidea.lang.psi'
  //noinspection BnfResolve
  psiImplPackage='com.github.wingidea.lang.psi.impl'

  tokens = [
    INFLIGHT_SPECIFIER = 'inflight'
    UNPHASED_SPECIFIER = 'unphased'
    STATIC = 'static'
    BOOL = 'regexp:true|false'
    INTEGER = 'regexp:0|[1-9]\d*'
    DECIMAL = 'regexp:0\.\d+|[1-9]\d*\.\d+'
    NIL = 'nil'
    BRING = 'bring'
    TEST = 'test'
    ADDITION = '+'
    SUBTRACTION = '-'
    MULTIPLY = '*'
    DIVIDE = '/'
    MODULO = '%'
    FLOOR_DIVIDE = '\'
    POWER = '**'
    AND = '&&'
    OR = '||'
    NOT = '!'
    ASSIGNMENT = '='
    PLUS_ASSIGNMENT = '+='
    MINUS_ASSIGNMENT = '-='
    EQUAL = '=='
    NOT_EQUAL = '!='
    LESS_THAN = '<'
    LESS_THAN_OR_EQUAL = '<='
    GREATER_THAN = '>'
    GREATER_THAN_OR_EQUAL = '>='
    UNWRAP_OR = '??'
    ALIAS = 'as'
    NEW = 'new'
    LET = 'let'
    VAR = 'var'
    FOR = 'for'
    IN = 'in'
    IF = 'if'
    ELSE = 'else'
    ELIF = 'elif'
    WHILE = 'while'
    CLASS = 'class'
    ENUM = 'enum'
    EXTENDS = 'extends'
    IMPLEMENTS = 'impl'
    INTERFACE = 'interface'
    ASYNC = 'async'
    STRUCT = 'struct'
    TRY = 'try'
    CATCH = 'catch'
    FINALLY = 'finally'
    LEFT_CURLY_BRACE = '{'
    RIGHT_CURLY_BRACE = '}'
    LEFT_SQUARE_BRACE = '['
    RIGHT_SQUARE_BRACE = ']'
    LEFT_PARENTHESIS = '('
    RIGHT_PARENTHESIS = ')'
    BREAK = 'break'
    CONTINUE = 'continue'
    RETURN = 'return'
    DOT = '.'
    COMMA = ','
    SEMICOLON = ';'
    COLON = ':'
    ARROW = '=>'
    SUPER = 'super'
    QUESTION_MARK = '?'
    COMMENT = 'regexp://.*'
    EXTERN = 'extern'
    AWAIT = 'await'
    DEFER = 'defer'
    PUBLIC = 'pub'
    PROTECTED = 'protected'
    THROW = 'throw'
    INTERNAL = 'internal'
    LIFT = 'lift'
    AT_TYPE = '@TYPE'
    VARIADIC = '...'
    MULTI_LINE_COMMENT = 'regexp:/\*([^*]|[\r\n]|(\*+([^*/]|[\r\n])))*\*+/'
    STRING_LITERAL = 'regexp:\"([^\\\"\r\n]|\\[^\r\n])*\"?'
    IDENTIFIER = 'regexp:[A-Za-z_$][A-Za-z_$0-9]*|[A-Z][A-Z0-9_]*'
    WHITE_SPACE = 'regexp:\s+'
    INTRINSIC_IDENTIFIER = 'regexp:/@[A-Za-z_$0-9]*/'
  ]
  extends(".*Expression")=Expression

}

Schema ::= Statement*

ReferenceExpression ::=
    NestedIdentifierExpression
    | IDENTIFIER
    | StructuredAccessExpression

ParenthesizedIdentifier ::=
    LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS

private CustomType ::=
    IDENTIFIER (DOT IDENTIFIER)*

NestedIdentifierExpression ::=
    (Expression | JsonContainerType) Accessor IDENTIFIER?

Accessor ::=
    DOT
    | '?.'

PhaseSpecifier ::=
    INFLIGHT_SPECIFIER
    | UNPHASED_SPECIFIER

private Statement ::=
    TestStatement
    | ImportStatementBlock
    | VariableAssignmentStatement
    | ExpressionStatement
    | VariableDefinitionStatement
    | ReturnStatement
    | ClassDefinitionStatement
    | InterfaceDefinitionStatement
    | ForInLoopStatement
    | WhileStatement
    | BreakStatement
    | ContinueStatement
    | IfStatement
    | IfLetStatement
    | StructDefinitionStatement
    | EnumDefinitionStatement
    | TryCatchStatement
    | SuperConstructorStatement
    | ThrowStatement
    | LiftStatement

ImportStatementBlock ::=
    ImportStatement ImportStatement*

ImportStatement ::=
    BRING (IDENTIFIER|STRING_LITERAL)? (ALIAS IDENTIFIER)? SEMICOLON {pin="BRING"}

StructDefinitionStatement ::=
    AccessModifier? STRUCT IDENTIFIER (EXTENDS CustomType (COMMA CustomType)*)? StructImplementation {pin=2}

private StructImplementation ::=
    LEFT_CURLY_BRACE StructField* RIGHT_CURLY_BRACE

StructField ::=
    IDENTIFIER TypeAnnotation SEMICOLON {pin=1}

EnumDefinitionStatement ::=
    AccessModifier? ENUM IDENTIFIER LEFT_CURLY_BRACE (EnumField (COMMA EnumField)* COMMA?)? RIGHT_CURLY_BRACE {pin="ENUM"}

EnumField ::=
    IDENTIFIER

ReturnStatement ::=
    RETURN Expression? SEMICOLON {pin="RETURN"}

ThrowStatement ::=
    THROW Expression? SEMICOLON {pin="THROW"}

LiftStatement ::=
    LIFT LEFT_CURLY_BRACE LiftQualification (COMMA LiftQualification)* RIGHT_CURLY_BRACE BlockStatement {pin="LIFT"}

LiftQualification ::=
    Expression COLON (IDENTIFIER | LEFT_SQUARE_BRACE IDENTIFIER (COMMA IDENTIFIER)* RIGHT_SQUARE_BRACE)

AssignmentOperator ::=
    ASSIGNMENT
    | PLUS_ASSIGNMENT
    | MINUS_ASSIGNMENT

VariableAssignmentStatement ::=
    (ReferenceExpression | StructuredAccessExpression | NestedIdentifierExpression) AssignmentOperator Expression SEMICOLON

ExpressionStatement ::=
    Expression SEMICOLON {pin=1}

VariableDefinitionStatement ::=
    LET VAR? IDENTIFIER TypeAnnotation? ASSIGNMENT Expression SEMICOLON

TypeAnnotation ::=
    COLON Type

ClassModifiers ::=
    AccessModifier PhaseSpecifier
    | PhaseSpecifier AccessModifier

ClassDefinitionStatement ::=
    ClassModifiers? CLASS IDENTIFIER (EXTENDS CustomType)? (IMPLEMENTS CustomType (COMMA CustomType)*)? ClassImplementation

ClassImplementation ::=
    LEFT_CURLY_BRACE (Initializer | ClassField | MethodDefinition)* RIGHT_CURLY_BRACE

FieldModifiers ::=
    AccessModifier
    | STATIC
    | PhaseSpecifier
    | VAR

ClassField ::=
    FieldModifiers? IDENTIFIER TypeAnnotation (ASSIGNMENT Expression)? SEMICOLON

// Interfaces

InterfaceModifiers ::=
    AccessModifier PhaseSpecifier
    | PhaseSpecifier AccessModifier

InterfaceDefinitionStatement ::=
    InterfaceModifiers? INTERFACE IDENTIFIER (EXTENDS CustomType (COMMA CustomType)*)? InterfaceImplementation {pin="INTERFACE"}

InterfaceImplementation ::=
    LEFT_CURLY_BRACE (MethodDefinition | ClassField )* RIGHT_CURLY_BRACE

InclusiveRange ::=
    ASSIGNMENT

LoopRange ::=
    Expression '..' InclusiveRange? Expression

ForInLoopStatement ::=
    FOR IDENTIFIER IN (Expression | LoopRange) BlockStatement {pin="FOR"}

WhileStatement ::=
    WHILE Expression BlockStatement

BreakStatement ::=
    BREAK SEMICOLON

SuperConstructorStatement ::=
    SUPER ArgumentList SEMICOLON

ContinueStatement ::=
    CONTINUE SEMICOLON

IfLetStatement ::=
    IF LET VAR? IDENTIFIER ASSIGNMENT Expression BlockStatement (ElIfLetBlock | ElIfBlock)* (ELSE BlockStatement)?

ElIfLetBlock ::=
    ELSE IF LET VAR? IDENTIFIER ASSIGNMENT Expression BlockStatement

IfStatement ::=
    IF Expression BlockStatement ElIfBlock* (ELSE BlockStatement)?

ElIfBlock ::=
    ELSE IF Expression BlockStatement

TryCatchStatement ::=
    TRY BlockStatement CatchBlock? FinallyBlock?

CatchBlock ::=
    CATCH (IDENTIFIER | ParenthesizedIdentifier)? BlockStatement

FinallyBlock ::=
    FINALLY BlockStatement

BlockStatement ::=
    LEFT_CURLY_BRACE Statement* RIGHT_CURLY_BRACE

Expression ::=
    BinaryExpression
    | UnaryExpression
    | NewExpression
    | LiteralExpression
    | ReferenceExpression
    | CallExpression
    | ClosureExpression
    | AwaitExpression
    | DeferExpression
    | CollectionLiteralExpression
    | ParenthesizedExpression
    | JsonLiteralExpression
    | StructLiteralExpression
    | OptionalUnwrapExpression
    | IntrinsicExpression
    | TypeIntrinsicExpression

IntrinsicExpression ::=
    INTRINSIC_IDENTIFIER ArgumentList?

TypeIntrinsicExpression ::=
    AT_TYPE LEFT_PARENTHESIS Type RIGHT_PARENTHESIS

LiteralExpression ::=
    String
    | Number
    | BOOL
    | Duration
    | NIL

Number ::=
    INTEGER
    | DECIMAL

Duration ::=
    Number "ms"
    | Number "s"
    | Number "m"
    | Number "h"
    | Number "d"
    | Number "mo"
    | Number "y"

CallExpression ::=
    (Expression | SuperCallExpression) ArgumentList

SuperCallExpression ::=
    'super' DOT IDENTIFIER

ArgumentList ::=
    LEFT_PARENTHESIS (Argument (COMMA Argument)* COMMA?)? RIGHT_PARENTHESIS

Argument ::=
    (IDENTIFIER COLON)? Expression

NewExpression ::=
    NEW (CustomType | MutableContainerType) ArgumentList (ALIAS Expression)? (IN Expression)?

Type ::=
    OptionalType
    | FieldType

FieldType ::=
    CustomType
    | BuiltInType
    | BuiltInContainerType
    | JsonContainerType
    | FunctionType
    | ParenthesizedType

ParenthesizedType ::=
    LEFT_PARENTHESIS Type RIGHT_PARENTHESIS

private OptionalType ::=
    FieldType QUESTION_MARK

FunctionType ::=
    PhaseSpecifier? ParameterTypeList [COLON Type]

ParameterTypeList ::=
    LEFT_PARENTHESIS [Type (COMMA Type)* COMMA?] RIGHT_PARENTHESIS

private BuiltInType ::=
    "num"
    | "bool"
    | "any"
    | "str"
    | "void"
    | "duration"
    | "datetime"
    | "regex"
    | "bytes"

Initializer ::=
    PhaseSpecifier? NEW ParameterList BlockStatement {pin="NEW"}

ExternModifier ::=
    EXTERN String

ReturnType ::=
    TypeAnnotation

MethodModifier ::=
    ExternModifier
    | AccessModifier
    | STATIC
    | PhaseSpecifier

MethodDefinition ::=
    MethodModifier* IDENTIFIER ParameterList ReturnType? (BlockStatement | SEMICOLON) {pin="IDENTIFIER"}

AccessModifier ::=
    PUBLIC
    | PROTECTED
    | INTERNAL

ParameterDefinition ::=
    VAR? VARIADIC? IDENTIFIER TypeAnnotation?

ParameterList ::=
    LEFT_PARENTHESIS [ParameterDefinition (COMMA ParameterDefinition)* COMMA?] RIGHT_PARENTHESIS

private ImmutableContainerType ::=
    "Array" ContainerValueType
    | "Set" ContainerValueType
    | "Map" ContainerValueType
    | "Promise" ContainerValueType

private MutableContainerType ::=
    "MutSet" ContainerValueType
    | "MutMap" ContainerValueType
    | "MutArray" ContainerValueType

private BuiltInContainerType ::=
    ImmutableContainerType
    | MutableContainerType

ContainerValueType ::=
    LESS_THAN Type GREATER_THAN

OptionalUnwrapExpression ::=
    Expression NOT

UnaryOperators ::=
    NOT
    | SUBTRACTION

UnaryExpression ::=
    UnaryOperators Expression

MathematicalOperators ::=
    ADDITION
    | SUBTRACTION
    | MULTIPLY
    | DIVIDE
    | MODULO
    | FLOOR_DIVIDE
    | POWER

LogicalOperators ::=
    OR
    | AND

RelationalOperators ::=
    EQUAL
    | NOT_EQUAL
    | GREATER_THAN
    | GREATER_THAN_OR_EQUAL
    | LESS_THAN_OR_EQUAL
    | LESS_THAN

Operators ::=
    MathematicalOperators
    | LogicalOperators
    | RelationalOperators
    | UNWRAP_OR

BinaryExpression ::=
    Expression Operators Expression

ClosureModifier ::=
    PhaseSpecifier

ClosureExpression ::=
    ClosureModifier? ParameterList ReturnType? ARROW BlockStatement

AwaitExpression ::=
    AWAIT Expression

DeferExpression ::=
    DEFER Expression

ParenthesizedExpression ::=
    LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS

CollectionLiteralExpression ::=
    ArrayLiteralExpression
    | MapLiteralExpression

ArrayLiteralExpression ::=
    BuiltInContainerType? LEFT_SQUARE_BRACE (Expression (COMMA Expression)* COMMA?)? RIGHT_SQUARE_BRACE

MapLiteralExpression ::=
    BuiltInContainerType? LEFT_CURLY_BRACE MapLiteralMember (COMMA MapLiteralMember)* COMMA? RIGHT_CURLY_BRACE

StructLiteralExpression ::=
    CustomType LEFT_CURLY_BRACE StructLiteralMember* (COMMA StructLiteralMember)* COMMA? RIGHT_CURLY_BRACE

MapLiteralMember ::=
    Expression ARROW Expression

StructLiteralMember ::=
    IDENTIFIER
    | IDENTIFIER COLON Expression

StructuredAccessExpression ::=
    Expression LEFT_SQUARE_BRACE Expression RIGHT_SQUARE_BRACE

JsonLiteralExpression ::=
    JsonContainerType Expression
    | JsonMapLiteral

JsonMapLiteral ::=
    LEFT_CURLY_BRACE (JsonLiteralMember (COMMA JsonLiteralMember)* COMMA?)? RIGHT_CURLY_BRACE

JsonLiteralMember ::=
    (String | IDENTIFIER) COLON Expression
    | IDENTIFIER

private JsonContainerType ::=
    "Json"
    | "MutJson"

TestStatement ::=
    TEST String BlockStatement

// TODO: Missing support for template substitution
/*
    non_interpolated_string: ($) =>
      seq(
        '#"',
        repeat(choice($._non_interpolated_string_fragment, $._escape_sequence)),
        '"'
      ),
    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $.template_substitution
          )
        ),
        '"'
      ),
    template_substitution: ($) => seq("{", $.expression, "}"),
    _string_fragment: ($) => token.immediate(prec(1, /[^{"\\]+/)),
    _non_interpolated_string_fragment: ($) =>
        token.immediate(prec(1, /[^"\\]+/)),
    _escape_sequence: ($) =>
      token.immediate(
        seq(
          "\\",
          choice(
            "{",
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u\{[0-9a-fA-F]+\}/
          )
        )
      ),
 */
String ::= STRING_LITERAL
